# ultrafast-client

./: .gitignore  BUILD_PACKAGE_REPORT.md  CHANGELOG.md  CODE_QUALITY_COMPLETION_SUMMARY.md  Cargo.toml  FINAL_QA_REPORT.md  LICENSE  Makefile  PUBLISHING_GUIDE.md  QUALITY_ASSURANCE_REPORT.md  README.md  RELEASE_CHECKLIST_v0.1.0.md  ROADMAP.md  SESSION_PARITY_IMPLEMENTATION_SUMMARY.md  TEST_SUITE_SUMMARY.md  build.rs  pyproject.toml
.github/workflows/: ci.yml  publish.yml  release.yml
benchmarks/: benchmark_compare.py
python/ultrafast_client/: __init__.py
scripts/: publish.py
src/: async_client.rs  async_session.rs  auth_common.rs  benchmark.rs  client.rs  config.rs  connection_pool.rs  error.rs  http3.rs  lib.rs  middleware.rs  performance_advanced.rs  performance_common.rs  protocol_enhanced.rs  protocol_stats_common.rs  rate_limit_common.rs  response.rs  session.rs  sse.rs  ssl.rs  utils.rs  websocket.rs
tests/: test_async_client.py  test_configuration.py  test_integration.py  test_performance.py  test_session.py  test_sse.py  test_sync_client.py  test_websocket.py
